--- a/index.html
+++ b/index.html
@@ -611,7 +611,8 @@ https://templatemo.com/tm-606-string-master
     </section>
 
     <!-- Beat Pad (Step 7) -->
-    <section class="tool-section" id="beat-pad-tool" style="background: transparent; padding-top: 3rem; border: none;">
+    <section class="tool-section" id="beat-pad-tool"
+      style="background: #18181b; padding: 4rem 0; border-top: 1px solid #27272a; border-bottom: 1px solid #27272a;">
       <div class="section-container">
         <div class="section-header">
           <div class="section-label" style="color: #10b981;">Step 7: Manual Percussion</div>
@@ -2044,6 +2045,57 @@ https://templatemo.com/tm-606-string-master
     }); // End DOMContentLoaded
   </script>
 
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-grid">
+      <div class="footer-brand">
+        <a href="#" class="logo">
+          <div class="logo-icon">♪</div>
+          StringMaster
+        </a>
+        <p>The ultimate browser-based production suite for artists. Sketch, record, and master anywhere.</p>
+      </div>
+
+      <div class="footer-column">
+        <h4 class="footer-title">Platform</h4>
+        <ul class="footer-links">
+          <li><a href="#features">Features</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#instructors">Instructors</a></li>
+          <li><a href="#digital-studio">Studio</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h4 class="footer-title">Resources</h4>
+        <ul class="footer-links">
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Community</a></li>
+          <li><a href="#">Help Center</a></li>
+          <li><a href="#">Status</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h4 class="footer-title">Legal</h4>
+        <ul class="footer-links">
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms of Service</a></li>
+          <li><a href="#">Cookie Policy</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>&copy; 2026 StringMaster. All rights reserved.</p>
+      <div class="social-links" style="display: flex; gap: 1rem;">
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
+        <a href="#">YouTube</a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
